add SwiftPM support

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,3 +29,23 @@ jobs:
 
       - name: Run checks
         run: ./gradlew --stacktrace :kmpertrace-runtime:check :plugin:check :kmpertrace-cli:test :kmpertrace-parse:allTests
+
+  xcframework:
+    runs-on: macos-latest
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
+      - name: Build XCFramework
+        run: ./gradlew :kmpertrace-runtime:assembleXCFramework
