--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,17 +43,31 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
 
-      - name: Build XCFramework (Release)
-        run: ./gradlew :kmpertrace-runtime:assembleKmperTraceRuntimeReleaseXCFramework
-
-      - name: Zip XCFramework
+      - name: Verify XCFramework checksum matches Package.swift
         run: |
-          cd kmpertrace-runtime/build/XCFrameworks/release
-          zip -r KmperTraceRuntime.xcframework.zip KmperTraceRuntime.xcframework
-          swift package compute-checksum KmperTraceRuntime.xcframework.zip || shasum -a 256 KmperTraceRuntime.xcframework.zip
+          set -euo pipefail
+          ZIP_PATH="kmpertrace-runtime/build/XCFrameworks/release/KmperTraceRuntime.xcframework.zip"
+          CHECKSUM=$(swift package compute-checksum "$ZIP_PATH")
+          echo "XCFramework checksum: $CHECKSUM"
+
+          MANIFEST_CHECKSUM=$(python - <<'PY'
+import re, pathlib, sys
+manifest = pathlib.Path("Package.swift").read_text()
+m = re.search(r'checksum:\s*"([^"]+)"', manifest)
+if not m:
+    sys.exit("Could not find checksum in Package.swift")
+print(m.group(1))
+PY
+)
+
+          echo "Package.swift checksum: $MANIFEST_CHECKSUM"
+          if [ "$CHECKSUM" != "$MANIFEST_CHECKSUM" ]; then
+            echo "Checksum mismatch between prebuilt zip and Package.swift. Fix Package.swift (or regenerate the zip/checksum) before tagging a release." >&2
+            exit 1
+          fi
 
       - name: Upload XCFramework as Release asset
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             kmpertrace-runtime/build/XCFrameworks/release/KmperTraceRuntime.xcframework.zip
