--- a/.github/workflows/compute-spm-checksum.yml
+++ b/.github/workflows/compute-spm-checksum.yml
@@ -21,6 +21,17 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            ~/.konan
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/settings.gradle*', '**/build.gradle*') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
+
       - name: Build XCFramework (Release)
         run: ./gradlew :kmpertrace-runtime:assembleKmperTraceRuntimeReleaseXCFramework
 
