--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish
 
 on:
   release:
-    types: [published, prereleased]
+    types: [released, published, prereleased]
   workflow_dispatch:
     inputs:
       ref:
