--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,8 @@ name: Publish
 
 on:
   release:
-    types: [released, published, prereleased]
+    types: [published, prereleased]
+    branches: ["main"]
   workflow_dispatch:
     inputs:
       ref:
@@ -15,6 +16,7 @@ jobs:
     runs-on: macOS-latest
     permissions:
       contents: write
+      pull-requests: write
     steps:
       - name: Check out code
         uses: actions/checkout@v4
