--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+        with:
+          # For releases, ensure we check out the exact tag commit (Package.swift is read from the tag by SwiftPM).
+          # For manual runs, allow overriding the ref.
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ref != '' && github.event.inputs.ref || github.event.release.tag_name }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -86,12 +90,22 @@ jobs:
             exit 1
           fi
 
+          if [ ! -f Package.swift ]; then
+            echo "Package.swift not found at repo root." >&2
+            ls -la
+            exit 1
+          fi
+
+          # Parse checksum anywhere in the file (Package.swift may be formatted onto a single line).
           EXPECTED_CHECKSUM=$(
-            sed -n 's/^[[:space:]]*checksum:[[:space:]]*\"\\([^\"]*\\)\".*/\\1/p' Package.swift | head -n1
+            perl -ne 'if (/checksum:\\s*\"([^\"]+)\"/) { print $1; exit }' Package.swift || true
           )
 
           if [ -z "$EXPECTED_CHECKSUM" ]; then
-            echo "Failed to parse checksum from Package.swift (expected a line like: checksum: \"...\")" >&2
+            echo "Failed to parse checksum from Package.swift (expected to find: checksum: \"...\")" >&2
+            echo "" >&2
+            echo "Package.swift (first 120 lines):" >&2
+            sed -n '1,120p' Package.swift >&2
             exit 1
           fi
 
