--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,6 +71,13 @@ jobs:
           set -euo pipefail
           ./gradlew :kmpertrace-runtime:assembleKmperTraceRuntimeReleaseXCFramework
 
+      - name: Normalize XCFramework timestamps
+        shell: bash
+        run: |
+          set -euo pipefail
+          XCFRAMEWORK_DIR="kmpertrace-runtime/build/XCFrameworks/release/KmperTraceRuntime.xcframework"
+          find "$XCFRAMEWORK_DIR" -exec touch -t 198001010000 {} +
+
       - name: Zip XCFramework
         shell: bash
         run: |
