--- a/.github/workflows/compute-spm-checksum.yml
+++ b/.github/workflows/compute-spm-checksum.yml
@@ -49,8 +49,16 @@ jobs:
       - name: Print XCFramework UUIDs
         run: |
           set -euo pipefail
-          dwarfdump --uuid kmpertrace-runtime/build/XCFrameworks/release/KmperTraceRuntime.xcframework/ios-arm64/KmperTraceRuntime
-          dwarfdump --uuid kmpertrace-runtime/build/XCFrameworks/release/KmperTraceRuntime.xcframework/ios-arm64_x86_64-simulator/KmperTraceRuntime
+          XCFRAMEWORK_DIR="kmpertrace-runtime/build/XCFrameworks/release/KmperTraceRuntime.xcframework"
+          find "$XCFRAMEWORK_DIR" -maxdepth 2 -type d -name "*.framework" -print0 | while IFS= read -r -d '' fw; do
+            bin="$fw/$(basename "$fw" .framework)"
+            echo "UUIDs for $bin"
+            if [ -f "$bin" ]; then
+              dwarfdump --uuid "$bin"
+            else
+              echo "Missing binary at $bin"
+            fi
+          done
 
       - name: Compute SwiftPM checksum
         id: checksum
